# iloveads

./: .gitignore  README.md  dev.sh
browser/: Makefile  dev.sh  manifest.json  popup.html
browser/js/: background.js  popup.js  toggle.js
desktop/: dev.sh  pyproject.toml  requirements.txt
desktop/iloveads/: config.py  main.py
scripts/: clean.sh  create_firefox_profile.sh  run_desktop.sh  run_firefox.sh
