[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iloveads"
version = "20241014"
dependencies = [
	'asyncio',
	'websockets',
	'selenium',
	'webdriver_manager',
]
requires-python = ">=3.8"
authors = [
{name = "ayham-1", email = "me@ayham.xyz"},
]
maintainers = [
{name = "ayham-1", email = "me@ayham.xyz"},
]
description = ""
readme = "../README.md"
license = {file = "../LICENSE"}
keywords = []

[project.urls]
Homepage = "https://github.com/ayham-1/iloveads"

[project.scripts]
iloveads = "iloveads.main:main"

[tool.hatch.build.targets.wheel]
packages = ["iloveads/"]
